--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <nav>
             <a class="dangqian" href="">首页</a>
-            <a href="duanwen.html">短文</a>
-            <a href="rizhi.html">日志</a>
-            <a href="liuyan.html">留言板</a>
+            <a href="c.html">短文</a>
+            <a href="a.html">???</a>
+            <a href="b.html">留言板</a>
         </nav>
         <div id="main">
             <div id="main_left">
