--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <a class="dangqian" href="">首页</a>
-            <a href="c.html">短文</a>
+            <a href="c.html">美图</a>
             <a href="a.html">???</a>
             <a href="b.html">留言板</a>
         </nav>
