--- a/a.html
+++ b/a.html
@@ -14,6 +14,14 @@
 	</head>
  
 	<body>
+		<div>
+			<nav>
+			    <a href="index.html">首页</a>
+			    <a href="c.html">美图</a>
+			    <a class="dangqian" href="">???</a>
+			    <a href="b.html">留言板</a>
+			</nav>
+		</div>
  
 		<!--
 			<canvas>画布 画板 画画的本子
