--- a/c.html
+++ b/c.html
@@ -11,6 +11,14 @@
 </head>
 
 <body background="5.jpg">
+	<div>
+		<nav>
+		    <a href="index.html">首页</a>
+		    <a class="dangqian" href="">美图</a>
+		    <a href="a.html">???</a>
+		    <a href="b.html">留言板</a>
+		</nav>
+	</div>
     <style type="text/css">
 	body{
 		background: url("5.jpg") no-repeat center center fixed;
