--- a/b.html
+++ b/b.html
@@ -14,18 +14,18 @@
 	
     <div id="bigbox">
         <div id="banner">
-            <img src="1.JPG" alt="">
+            <img src="image/1.JPG" alt="">
         </div>
         <nav>
             <a href="index.html">首页</a>
             <a href="c.html">美图</a>
-            <a href="a.html">???</a>
+            <a href="a.html">新闻</a>
             <a class="dangqian" href="">留言板</a>
         </nav>
         <div id="main">
             <div id="main_left">
                 <h2></h2>
-                <img src="crz.JPG" alt="">
+                <img src="image/crz.JPG" alt="">
                 <p>
 
                 </p>
@@ -56,7 +56,7 @@
 </body>
 <script>
 	function fun() {
-		alert('点赞成功');
+		alert('点赞成功\n联系我们:通过QQ');
 	}
 </script>
 </html>
