--- a/c.html
+++ b/c.html
@@ -10,12 +10,12 @@
 
 </head>
 
-<body background="5.jpg">
+<body background="image/5.jpg">
 	<div>
 		<nav>
 		    <a href="index.html">首页</a>
 		    <a class="dangqian" href="">美图</a>
-		    <a href="a.html">???</a>
+		    <a href="a.html">新闻</a>
 		    <a href="b.html">留言板</a>
 		</nav>
 	</div>
