--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
     <div id="bigbox">
         <div id="banner">
-            <img src="1.JPG" alt="">
+            <img src="image/1.JPG" alt="">
         </div>
         <nav>
             <a class="dangqian" href="">首页</a>
             <a href="c.html">美图</a>
-            <a href="a.html">???</a>
+            <a href="a.html">新闻</a>
             <a href="b.html">留言板</a>
         </nav>
         <div id="main">
             <div id="main_left">
                 <h2>关于我</h2>
-                <img src="crz.JPG" alt="">
+                <img src="image/crz.JPG" alt="">
                 <p>
                     <span>姓名</span>:崔睿泽<br>
                     <span>性别</span>:男<br>
@@ -55,17 +55,17 @@
             <h2>发癫经历</h2>
             <div>
                 <div id="picture">
-                    <img src="2.png" alt="">
+                    <img src="image/2.png" alt="">
                     <p>在学校厕所</p>
                 </div>
                 <div id="picture">
-                    <img src="1.png" alt="">
+                    <img src="image/1.png" alt="">
                     <p>
                         在班级后排
                     </p>
                 </div>
                 <div id="picture">
-                    <img src="picture/33.png" alt="">
+                    <img src="picture/3image/3.png" alt="">
                     <p>
                         在发癫明日方舟
                     </p>
