--- a/a.html
+++ b/a.html
@@ -16,14 +16,15 @@
             <img src="image/1.JPG" alt="">
         </div>
         <nav>
-            <a href="">首页</a>
+            <a href="index.html">首页</a>
             <a href="c.html">美图</a>
             <a class="dangqian" href="">新闻</a>
             <a href="b.html">留言板</a>
         </nav>
         <div id="main">
 			<h2>新闻速览</h2>
-			<a href="news/news_2022-11-02.html">孙笑川指示崔睿泽偷袭珍珠港----发布于2022-11-02-21:13</a>
+			<a href="news/news_2022-11-02.html">孙笑川指示崔睿泽偷袭珍珠港----发布于2022-11-02-21:13<br/></a>
+			<a href="news/news_2022-11-03.html">泽连斯基拒绝谈判后，美俄2通电话打往中国，局势突然出现不寻常----发布于2022-11-03-11:24</a>
             </div>
         <footer>
             <p>
