--- a/c.html
+++ b/c.html
@@ -21,7 +21,7 @@
 	</div>
     <style type="text/css">
 	body{
-		background: url("5.jpg") no-repeat center center fixed;
+		background: url("image/5.jpg") no-repeat center center fixed;
                 /*兼容浏览器版本*/
                 -webkit-background-size: cover;
                 -o-background-size: cover;                
