--- a/a.html
+++ b/a.html
@@ -20,6 +20,7 @@
             <a href="c.html">美图</a>
             <a class="dangqian" href="">新闻</a>
             <a href="b.html">留言板</a>
+			<a href="log.html">日志</a>
         </nav>
         <div id="main">
 			<h2>新闻速览</h2>
