--- a/c.html
+++ b/c.html
@@ -17,6 +17,7 @@
 		    <a class="dangqian" href="">美图</a>
 		    <a href="a.html">新闻</a>
 		    <a href="b.html">留言板</a>
+			<a href="log.html">日志</a>
 		</nav>
 	</div>
     <style type="text/css">
