--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="c.html">美图</a>
             <a href="a.html">新闻</a>
             <a href="b.html">留言板</a>
+			<a href="log.html">日志</a>
         </nav>
         <div id="main">
             <div id="main_left">
@@ -65,15 +66,15 @@
                     </p>
                 </div>
                 <div id="picture">
-                    <img src="picture/3image/3.png" alt="">
+                    <img src="image/3.png" alt="">
                     <p>
                         在发癫明日方舟
                     </p>
                 </div>
                 <div id="picture">
-                    <img src="picture/44.png" alt="">
+                    <img src="image/crz.JPG" alt="">
                     <p>
-                        在交流原神
+                        在发癫原神
                     </p>
                 </div>
             </div>
