--- a/a.html
+++ b/a.html
@@ -25,7 +25,8 @@
         <div id="main">
 			<h2>新闻速览</h2>
 			<a href="news/news_2022-11-02.html">孙笑川指示崔睿泽偷袭珍珠港----发布于2022-11-02-21:13<br/></a>
-			<a href="news/news_2022-11-03.html">泽连斯基拒绝谈判后，美俄2通电话打往中国，局势突然出现不寻常----发布于2022-11-03-11:24</a>
+			<a href="news/news_2022-11-03.html">泽连斯基拒绝谈判后，美俄2通电话打往中国，局势突然出现不寻常----发布于2022-11-03-11:24<br/></a>
+			<a href="news/news_2022-11-19.html">崔睿泽爆炒毕明智?真相竟如此不堪----发布于2022-11-19-13:59</a>
             </div>
         <footer>
             <p>
