--- a/log.html
+++ b/log.html
@@ -37,6 +37,7 @@
 				<P>2022-11-06 20:05 修改了主页</P>
 				<p>2022-11-06 20:07 old:将图片放进了文件夹里</p>
 				<p>2022-11-06 20:15 上传了更新后的版本</p>
+				<p>2022-11-27 19:20 修改了主页</p>
             </div>
         </div>
         <footer>
