--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                 <img src="image/crz.JPG" alt="">
                 <p>
                     <span>姓名</span>:崔睿泽<br>
-                    <span>性别</span>:男<br>
+                    <span>性别</span>:男(生理表现为男,心理性别武装直升机,异种恋:喜欢人类)<br>
                     <span>爱好</span>:玩原神 玩明日方舟<br>
                     <span>性格</span> :傻卵 热爱放屁<br>
                     <span>家乡</span>:安徽<br>
-                    <span>专业</span>:整活
+                    <span>专业</span>:整活<br>
+					<span>配偶</span>:潘盼兮(疑似)
                 </p>
             </div>
             <div id="main_right">
@@ -57,24 +58,12 @@
             <div>
                 <div id="picture">
                     <img src="image/2.png" alt="">
-                    <p>在学校厕所</p>
+                    <p>明日方舟:粥批行动</p>
                 </div>
                 <div id="picture">
                     <img src="image/1.png" alt="">
                     <p>
-                        在班级后排
-                    </p>
-                </div>
-                <div id="picture">
-                    <img src="image/3.png" alt="">
-                    <p>
-                        在发癫明日方舟
-                    </p>
-                </div>
-                <div id="picture">
-                    <img src="image/crz.JPG" alt="">
-                    <p>
-                        在发癫原神
+                        原神:正义切割者
                     </p>
                 </div>
             </div>
