--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                     <span>性别</span>:男(生理表现为男,心理性别武装直升机,异种恋:喜欢人类)<br>
                     <span>爱好</span>:玩原神 玩明日方舟<br>
                     <span>性格</span> :傻卵 热爱放屁<br>
-                    <span>家乡</span>:安徽<br>
                     <span>专业</span>:整活<br>
-					<span>配偶</span>:潘盼兮(疑似)
+                    <span>母亲</span>:潘盼兮<br>
+					<span>父亲</span>:吴仁昊<br>
+					<span>配偶</span>:王一凡(疑似)
                 </p>
             </div>
             <div id="main_right">
